--- a/emosProject/web/index.html
+++ b/emosProject/web/index.html
@@ -111,14 +111,14 @@
                             <div class="w3-container"> 
                                 <span onclick="document.getElementById('id02').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                                 <form id="login01" class="w3-display-topmiddle">
-                                    <input type="text" id="id" class="w3-display-topleft" value="아이디 입력">
+                                    <input type="text" id="id" class="w3-display-topleft" placeholder="아이디 입력">
                                     
-                                    <input type="password" id="pw" class="w3-display-bottomleft">
+                                    <input type="password" id="pw" class="w3-display-bottomleft"  placeholder="비번 입력">
                                     
                                     <a href="#" class="w3-button w3-display-right" onclick="submit">로그인</a>
                                 </form>                               
                                 <div class="w3-display-bottommiddle" id="loginservice">
-                                <a href="#" class="w3-button w3-indigo">기업회원가입</a>
+                                <a href="#" class="w3-button w3-indigo">회원가입</a>
                                 <a href="#" class="w3-button w3-green">아이디 찾기</a>
                                 <a href="#" class="w3-button w3-teal">비밀번호 찾기</a>
                                 </div>
